add note tracks

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 </head>
 
 <body>
-<div id="game">
+  <button id="startButton">Start</button>
 
-    <div id="notes">
-      <!-- This div will contain the falling notes -->
-    </div>
+    <div id="game">
+      <div id="a"></div>
+      <div id="s"></div>
+      <div id="d"></div>
+      <div id="f"></div>
     <div id="target"></div>
 
 </div>
+
 
 </body>
 <script src= "script.js"></script>
