add score to window

--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
 </head>
 
 <body>
-  <button id="startButton">Start</button>
-
-    <div id="game">
+  <div id="game">
       <div id="a"></div>
       <div id="s"></div>
       <div id="d"></div>
       <div id="f"></div>
-</div>
-
-
+  </div>
+    
+  <div class="ui">
+    <button id="startButton">
+      <span class="btn-text">Start!</span>
+    </button>
+    <div id="status"></div>
+    <div id="score">
+      <span></span>
+    </div>
+  </div>
 </body>
 <script src= "script.js"></script>
